# osworld-server

./: .gitignore  README.md  STREAMING_PROTOCOL.md  build_windows_server.ps1  h264_browser_client.html  main.py  pyproject.toml  pyxcursor.py  requirements.txt
src/: __init__.py  accessibility.py  actions.py  capture.py  http_routes.py  platform_runtime.py  pyxcursor.py  server.py  streaming.py
